--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
