--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
     "toastify": "^2.0.1",
     "uae_project": "file:"
