--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.3",
     "toastify": "^2.0.1",
     "uae_project": "file:"
