--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://admin:admin@iqbridge.xhgva.mongodb.net/?retryWrites=true&w=majority&appName=IQBridge
+DB_URL=mongodb+srv://vignesh:vignesh230704@cluster0.d2siq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 FRONTEND_URL=https://iq-bridge.onrender.com
